style(forum): :bug: Fixed layout bugs in post creation

--- a/client/src/styles/components/Foro/foro_Home/_foro_Home.scss
+++ b/client/src/styles/components/Foro/foro_Home/_foro_Home.scss
@@ -15,6 +15,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: $standard-font-Outfit-sans-serif;
+
+    
 
     .foro_posts_creator {
       width: 100%;
@@ -25,68 +28,78 @@
       padding: 10px 25px;
       border-radius: 5px;
 
-      .foro_posts_inputsSide {
+      .foro_post_inputsAndImage {
         display: flex;
-        align-items: center;
-        justify-content: center;
-        padding-bottom: 8px;
-        img {
-          width: 50px;
-          margin-right: 10px;
-          border-radius: 100%;
-        }
+        align-items: flex-start;
 
-        input {
-          width: 90%;
-          height: 40px;
-          border: 1px solid black;
-          //border-radius: 40px;
-          font-size: 24px;
-          text-decoration: none;
-          padding-left: 10px;
-          &:focus {
-            outline: none;
-            //border: 0;
+        .foro_posts_inputsSide {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          padding-bottom: 8px;
+          img {
+            width: 50px;
+            margin-right: 10px;
+            border-radius: 100%;
           }
-        }
-      }
-
-      .foro_posts_secondInput {
-        display: flex;
-        align-items: flex-end;
-        flex-direction: column;
-        input {
-          width: 90%;
-          height: 30px;
-          border: 1px solid black;
-          //border-radius: 15px;
-          font-size: 15px;
-          text-decoration: none;
-          padding-left: 20px;
-          margin-bottom: 10px;
-          &:focus {
-            outline: none;
-            //border: 0;
+  
+          input {
+            width: 90%;
+            height: 40px;
+            border: 1px solid black;
+            //border-radius: 40px;
+            font-size: 24px;
+            text-decoration: none;
+            padding-left: 10px;
+            &:focus {
+              outline: none;
+              //border: 0;
+            }
           }
         }
 
-        textarea {
-          resize: none;
+        .foro_posts_secondInput {
+          display: flex;
           width: 100%;
-        }
-
-        
-        .foro_post_textAREA {
-          width: 90%;
-          height: 50px;
-          padding-left: 10px;
-          margin-bottom: 15px;
-          border: 1px solid black;
-          &:focus {
-            outline: none;
+          flex-direction: column;
+          input {
+            width: 100%;
+            height: 30px;
+            border: 1px solid rgb(146, 140, 140);
+            font-family: $standard-font-Outfit-sans-serif;
+            //border-radius: 15px;
+            font-size: 15px;
+            text-decoration: none;
+            padding-left: 15px;
+            margin-bottom: 10px;
+            &:focus {
+              outline: none;
+              //border: 0;
+            }
+            
+          }
+  
+          
+  
+          
+          .foro_post_textAREA {
+            width: 100%;
+            height: 50px;
+            font-family: $standard-font-Outfit-sans-serif;
+            padding: 5px 15px;
+            margin-bottom: 15px;
+            border: 1px solid rgb(146, 140, 140);
+            resize: none;
+            &:focus {
+              outline: none;
+            }
           }
         }
       }
+
+      
+
+ 
 
       .foro_posts_buttonSide {
         margin-top: 10px;
